[package]
name = "dog-bot"
version = "0.1.0"
authors = ["shinichi kogai <kogai0121@gmail.com>"]

[dependencies]
rocket = "0.3.10"
rocket_codegen = "0.3.10"
rocket_contrib = "0.3.10"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
lazy_static = "1.0"
futures = "0.1.14"
hyper = "0.11.2"
hyper-tls = "0.1"
reqwest = "0.8.5"
regex = "0.2"
tokio-core = "0.1"
